Possibly fixed long tap selection issue on ios

--- a/game/css/styles.css
+++ b/game/css/styles.css
@@ -21,3 +21,8 @@ a:hover {
 a:visited {
     color: #7FDF7C;
 }
+.prevent-select {
+  -webkit-user-select: none; /* Safari */
+  -ms-user-select: none; /* IE 10 and IE 11 */
+  user-select: none; /* Standard syntax */
+}
